codex: Update endpoints to relect 311 data
